--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=ZHYdemo
 server.port=8080
 
 zhy.auth.url=https://connect.zhihuiya.com/oauth/token
-zhy.clientId=b4562e4188asd4cb486a19c6971515c66
-zhy.clientSecret=N1e0gd8sOk4z1vaWQfB18P4AbSk70lGs
+zhy.host=https://connect.zhihuiya.com
+zhy.path=/search/patent/query-search-patent
